@@ -1,3 +1,8 @@
+2018-09-26  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Provide an substitute message to IMAP clients that did not enable
+	UTF-8.
+
 2018-09-24  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* couriertls: additional fixes.
